<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:scrollbars="none"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/nav_background">

    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:src="@drawable/ic_back_dark_brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:src="@drawable/logo_bni_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLogoValue"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="1,000"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvFundTransfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/internation_fund_transfer"
        android:textSize="18sp"
        android:textColor="@color/custom_dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackButton" />

    <TextView
        android:id="@+id/tvSendingTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sending_to"
        android:textSize="16sp"
        android:textColor="@color/custom_dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFundTransfer" />

    <View
        android:id="@+id/background_3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tvSendingTo" />

    <View
        android:id="@+id/background_4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_circular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNameShort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="AW"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:maxLength="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aditya Verman"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBankDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bank of Philippine Island | 9368******"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EUR-IDR"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBankDetails" />

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:background="@color/nav_background"
        app:layout_constraintTop_toBottomOf="@id/background_3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCurrencyCalculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/transfer_message"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background" />

    <View
        android:id="@+id/background_1"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/currency_background"
        app:layout_constraintTop_toBottomOf="@id/txtCurrencyCalculator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtYourSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_send"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spnYourSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="IDR"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtYourSend" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtYourSendValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/spnYourSend"
        app:layout_constraintTop_toBottomOf="@id/txtYourSend" />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/currency_background_2"
        app:layout_constraintTop_toBottomOf="@id/spnYourSend" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRecipientGets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipient_gets"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spnRecipientGets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="EUR"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtRecipientGets" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRecipientGetsValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/spnRecipientGets"
        app:layout_constraintTop_toBottomOf="@id/txtRecipientGets" />

    <View
        android:id="@+id/background_2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/currency_background_2"
        app:layout_constraintBottom_toBottomOf="@+id/background_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtExchangeRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exchange_rate"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtExchangeRateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="EUR 1 = IDR 16436.72"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtExchangeRate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtChargeType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/charge_type"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_2" />

        <View
            android:id="@+id/background_5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            app:layout_constraintTop_toBottomOf="@+id/background" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/radioBeneficiary"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/beneficiary"
        app:layout_constraintTop_toTopOf="@+id/background_5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRadioBeneficiaryDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beneficiary_description"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioBeneficiary" />

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/radioGuaranteed"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:text="@string/guaranteed"
        app:layout_constraintTop_toBottomOf="@id/txtRadioBeneficiaryDes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRadioGuaranteedDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guaranteed_description"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGuaranteed" />

        <View
            android:id="@+id/background_6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            app:layout_constraintTop_toBottomOf="@+id/background_5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTransferPurpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:text="@string/transfer_purpose"
            app:layout_constraintTop_toTopOf="@+id/background_6" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnTransferPurposeValue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTransferPurpose" />
        <View
            android:id="@+id/divider_7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/custom_dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnTransferPurposeValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="30dp"
        android:background="@color/intro_logo_color"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:text="@string/btn_next"
        android:gravity="center_vertical|left"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>